[Refactor] 1.18 Omnibus - Common
- Prepare for Release Candidate Status and LTS Status of 1.18.1